; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/lsm1/extr_lsm_main.c_assertRwclientLockValue.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/lsm1/extr_lsm_main.c_assertRwclientLockValue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32 }

@LSM_LOCK_NRWCLIENT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @assertRwclientLockValue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assertRwclientLockValue(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  store i32 0, i32* %4, align 4
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp sge i64 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %1
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = call i32 @LSM_LOCK_RWCLIENT(i64 %12)
  %14 = sub nsw i32 %13, 1
  %15 = shl i32 1, %14
  store i32 %15, i32* %4, align 4
  br label %16

16:                                               ; preds = %9, %1
  %17 = load i64, i64* @LSM_LOCK_NRWCLIENT, align 8
  %18 = call i32 @LSM_LOCK_RWCLIENT(i64 %17)
  %19 = sub nsw i32 %18, 1
  %20 = shl i32 1, %19
  %21 = sub nsw i32 %20, 1
  store i32 %21, i32* %3, align 4
  %22 = call i32 @LSM_LOCK_RWCLIENT(i64 0)
  %23 = sub nsw i32 %22, 1
  %24 = shl i32 1, %23
  %25 = sub nsw i32 %24, 1
  %26 = load i32, i32* %3, align 4
  %27 = sub nsw i32 %26, %25
  store i32 %27, i32* %3, align 4
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 8
  %31 = load i32, i32* %3, align 4
  %32 = and i32 %30, %31
  %33 = load i32, i32* %4, align 4
  %34 = icmp eq i32 %32, %33
  %35 = zext i1 %34 to i32
  %36 = call i32 @assert(i32 %35)
  ret void
}

declare dso_local i32 @LSM_LOCK_RWCLIENT(i64) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
